--- a/templates/index.html
+++ b/templates/index.html
@@ -211,14 +211,14 @@
         <div class="row">
             <div class="hero-text">
                 <!-- FOR DEMO DAY -SHOPPING CART -->
-                <!-- <div id="items_table">
+                <div id="items_table">
                     <h3>Shopping List</h3>
                     <table id=list></table>
                     <p>
                         <label><input type=button value="Clear" onclick="ClearAll()">
                             <i>* Delete all items</i></label>
                     </p>
-                </div> -->
+                </div>
                 <!-- END SHOPPING CART -->
                 <h2>Thank You For Your Order</h2>
                 <hr style="height:7.5px;border-width:0;color:#d3c5af;background-color:#3a3a3a;border-radius:12px">
