--- a/static/css/style.css
+++ b/static/css/style.css
@@ -406,8 +406,7 @@ h6 {
   }
 
   #items_table{
-    margin-left:auto; 
-    margin-right:0;
+    float: right;
   }
 
 /* Test CSS for Product Name */
