--- a/templates/index.html
+++ b/templates/index.html
@@ -45,11 +45,11 @@
                 </a>
                 <!-- FOR DEMO DAY -SHOPPING CART -->
                 <div id="items_table">
-                    <h5>Shopping List</h5>
+                    <h6>Shopping List</h6>
                     <table id=list></table>
                     <p>
                         <label><input type=button value="Clear" onclick="ClearAll()">
-                            <i>* Delete all items</i></label>
+                        </label>
                     </p>
                 </div>
                 <!-- END SHOPPING CART -->
