--- a/templates/index.html
+++ b/templates/index.html
@@ -48,8 +48,8 @@
                     <h6>Shopping List</h6>
                     <table id=list></table>
                     <p>
-                        <label><input type=button value="Clear" onclick="ClearAll()">
-                        </label>
+                        <input type=button value="Clear" onclick="ClearAll()">
+                        <button id="submit" type="submit" href="/about" class="button-order button1">Checkout</button>
                     </p>
                 </div>
                 <!-- END SHOPPING CART -->
@@ -198,14 +198,7 @@
                     </div>
                 
                     <hr>
-                    <br>
-                    
-                    <div class="recommend-text">
-                        <div class="col-md-5">
-                            <button id="submit" type="submit" href="/about" class="button-order button1">Proceed to checkout
-                            </button>
-                        </div>
-                    </div>
+                    <br>                    
                 </div>
             </div>
         </div>
