--- a/templates/index.html
+++ b/templates/index.html
@@ -48,8 +48,8 @@
                     <h6>Shopping List</h6>
                     <table id=list></table>
                     <p>
-                        <input type=button value="Clear" onclick="ClearAll()">
-                        <button id="submit" type="submit" href="/about" class="button-order button1">Checkout</button>
+                        <input type="button" value="Clear" onclick="ClearAll()">
+                        <input type="button" value="Checkout">
                     </p>
                 </div>
                 <!-- END SHOPPING CART -->
