--- a/static/css/style.css
+++ b/static/css/style.css
@@ -410,6 +410,60 @@ h6 {
     color: #dda146;
   }
 
+  #product-grid {
+    margin: 40px;
+  }
+  
+  .txt-heading {
+    color: #211a1a;
+    border-bottom: 1px solid #E0E0E0;
+    overflow: auto;
+  }
+  
+  .product-item {
+    float: left;
+    background: #ffffff;
+    margin: 30px 30px 0px 0px;
+    border: #E0E0E0 1px solid;
+  }
+  
+  .product-image {
+    height: 155px;
+    width: 250px;
+    background-color: #FFF;
+  }
+  
+  .product-tile-footer {
+      padding: 15px 15px 0px 15px;
+      overflow: auto;
+  }
+  
+  .product-price {
+    float:left;
+  }
+  
+  .cart-action {
+    float: right;
+  }
+  
+  .product-quantity {
+      padding: 5px 10px;
+      border-radius: 3px;
+      border: #E0E0E0 1px solid;
+  }
+  
+  .btnAddAction {
+      padding: 5px 10px;
+      margin-left: 5px;
+      background-color: #efefef;
+      border: #E0E0E0 1px solid;
+      color: #211a1a;
+      float: right;
+      text-decoration: none;
+      border-radius: 3px;
+      cursor: pointer;
+  }
+
 /* Test CSS for Product Name */
 
 /* #prodDiv {
