--- a/templates/index.html
+++ b/templates/index.html
@@ -139,7 +139,7 @@
                 
                 <div class="card">
                     <h5>Quantity</h5>
-                    <input class="form-control" id="myInputQuantity" type="number" placeholder="Quantity">
+                    <input class="form-control" id="myInputQuantity" type="number" placeholder="Quantity" required>
                         <div id="quantity">
                         </div>
                 </div>
