--- a/templates/index.html
+++ b/templates/index.html
@@ -81,7 +81,7 @@
 <!-- HERO IMAGE AND TEXT END-->
 
 <!-- SECTION 2 - ORDERING -->
-
+<form>
     <section class="order">
         <div class="container">
             <div class="row">
@@ -159,7 +159,7 @@
 
 
     </section>
-
+</form>
 <!-- SECTION 2 - ORDERING END-->
 
 <!-- SECTION 3 - RECOMMENDER -->
