--- a/templates/index.html
+++ b/templates/index.html
@@ -116,9 +116,9 @@
                     <select id="product_category" type="text" onkeyup="myCategoryFunction()" placeholder="Category" autocomplete="on>
                         <div id="catDiv">
                             <ul id="catUL">
-                                {% for p in prodCatList %}
+                                <!-- {% for p in prodCatList %}
                                 <option value="{{ p['category'] }}">{{ p['category_name'] }}</option>
-                                {% endfor %}
+                                {% endfor %} -->
                             </ul>
                         </div>
                         </select>
