--- a/static/css/style.css
+++ b/static/css/style.css
@@ -70,7 +70,8 @@ h6 {
     text-align: center;
     padding: 17px 17px;
     font-size: 20px;
-    margin-left: 30px;
+    margin-left: 60px;
+    margin-right: 60px;
     margin-top: 15px;
     margin-bottom: 15px;
     border-radius: 18px; 
