--- a/templates/index.html
+++ b/templates/index.html
@@ -43,16 +43,7 @@
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                 <i class="fa fa-bars"></i>
                 </a>
-                <!-- FOR DEMO DAY -SHOPPING CART -->
-                <div id="items_table">
-                    <h6>Shopping List</h6>
-                    <table id=list></table>
-                    <p>
-                        <input type="button" value="Clear" onclick="ClearAll()">
-                        <input type="button" value="Checkout">
-                    </p>
-                </div>
-                <!-- END SHOPPING CART -->
+                
             </div> 
         </div>
     </header> 
@@ -161,6 +152,19 @@
 
     </section>
 </form>
+
+<!-- FOR DEMO DAY -SHOPPING CART -->
+<section>
+    <div id="items_table">
+        <h6>Shopping List</h6>
+        <table id=list></table>
+        <p>
+            <input type="button" value="Clear" onclick="ClearAll()">
+            <input type="button" value="Checkout">
+        </p>
+    </div>
+</section>
+<!-- END SHOPPING CART -->
 <!-- SECTION 2 - ORDERING END-->
 
 <!-- SECTION 3 - RECOMMENDER -->
