--- a/templates/index.html
+++ b/templates/index.html
@@ -72,8 +72,9 @@
 <!-- HERO IMAGE AND TEXT END-->
 
 <!-- SECTION 2 - ORDERING -->
-<form>
+
     <section class="order">
+        <form>
         <div class="container">
             <div class="row">
                 <div class="hero-text">
@@ -121,9 +122,9 @@
                         <div id="prodDiv">
                             <ul id="productUL">
                                 <option selected></option>
-                                <!-- {% for r in prodDetailList %}
+                                {% for r in prodDetailList %}
                                 <option value="{{ r['item_number'] }}">{{ r['item_description'] }}</option>
-                                {% endfor %} -->
+                                {% endfor %}
                             </ul>
                         </div>
                     </select>  
@@ -149,22 +150,24 @@
             </div>
         </div>
 
+    </form>
 
-    </section>
-</form>
-
-<!-- FOR DEMO DAY -SHOPPING CART -->
-<section>
-    <div id="items_table">
-        <h6>Shopping List</h6>
-        <table id=list></table>
-        <p>
-            <input type="button" value="Clear" onclick="ClearAll()">
-            <input type="button" value="Checkout">
-        </p>
+    <!-- SHOPPING CART -->
+    <div ="row">
+        <div id="items_table">
+            <h6>Shopping List</h6>
+            <table id=list></table>
+            <p>
+                <input type="button" value="Clear" onclick="ClearAll()">
+                <input type="button" value="Checkout">
+            </p>
+        </div>
     </div>
-</section>
-<!-- END SHOPPING CART -->
+    <!-- END SHOPPING CART -->
+    </section>
+
+
+
 <!-- SECTION 2 - ORDERING END-->
 
 <!-- SECTION 3 - RECOMMENDER -->
