--- a/templates/index.html
+++ b/templates/index.html
@@ -155,6 +155,7 @@
     <!-- SHOPPING CART -->
     <div class="row">
         <div class="col-md-6">
+            <div class="container">
             <div id="items_table">
                 <h6>Shopping List</h6>
                 <table id=list></table>
@@ -163,6 +164,7 @@
                     <input type="button" value="Checkout">
                 </p>
             </div>
+        </div>
         </div>
     </div>
     <!-- END SHOPPING CART -->
