--- a/templates/index.html
+++ b/templates/index.html
@@ -75,7 +75,8 @@
 
     <section class="order">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col">
+            <div class="col-md-5">
                 <form>
                     <div class="container">
                         <div class="row">
@@ -145,7 +146,7 @@
 
                 <div class="container">
                         <div class="col-md-5">
-                            <hr style="height:7.5px;border-width:0;color:#d3c5af;background-color:#dda146;border-radius:12px">
+                            <!-- <hr style="height:7.5px;border-width:0;color:#d3c5af;background-color:#dda146;border-radius:12px"> -->
                             <button id="submit" type="submit" class="button-order button1">Add to Cart
                             </button>
                         </div>
@@ -156,7 +157,7 @@
 
     <!-- SHOPPING CART -->
 
-        <div class="col-md-6">
+        <div class="col-md-4">
             <div class="container">
                 <div id="items_table">
                     <h6>Shopping List</h6>
@@ -170,9 +171,8 @@
         </div>
         <!-- END SHOPPING CART -->
     </div>
+    </div>
 </section>
-
-
 
 <!-- SECTION 2 - ORDERING END-->
 
