--- a/templates/index.html
+++ b/templates/index.html
@@ -74,6 +74,7 @@
 <!-- SECTION 2 - ORDERING -->
 
     <section class="order">
+        <div class="container">
         <div class="row">
             <div class="col">
             <div class="col-md-5">
@@ -155,7 +156,7 @@
             </form>
         </div>
 
-    <!-- SHOPPING CART -->
+        <!-- SHOPPING CART -->
 
         <div class="col-md-4">
             <div class="container">
@@ -170,6 +171,7 @@
             </div>
         </div>
         <!-- END SHOPPING CART -->
+    </div>
     </div>
     </div>
 </section>
