--- a/templates/index.html
+++ b/templates/index.html
@@ -77,7 +77,7 @@
         <div class="container">
         <div class="row">
             <div class="col">
-            <div class="col-md-5">
+            <!-- <div class="col-md-5"> -->
                 <form>
                     <div class="container">
                         <div class="row">
@@ -146,20 +146,20 @@
                 </div>
 
                 <div class="container">
-                        <div class="col-md-5">
+                        <!-- <div class="col-md-5"> -->
                             <!-- <hr style="height:7.5px;border-width:0;color:#d3c5af;background-color:#dda146;border-radius:12px"> -->
                             <button id="submit" type="submit" class="button-order button1">Add to Cart
                             </button>
-                        </div>
+                        <!-- </div> -->
                     </div>
-                </div>
+                <!-- </div> -->
             </form>
         </div>
 
         <!-- SHOPPING CART -->
 
         <div class="col-md-4">
-            <div class="container">
+            <div class="container-fluid">
                 <div id="items_table">
                     <h6>Shopping List</h6>
                     <table id=list></table>
@@ -172,7 +172,7 @@
         </div>
         <!-- END SHOPPING CART -->
     </div>
-    </div>
+    <!-- </div> -->
     </div>
 </section>
 
