--- a/templates/index.html
+++ b/templates/index.html
@@ -161,12 +161,13 @@
         <div class="col-md-4">
             <div class="container-fluid">
                 <div id="items_table">
-                    <h2>Shopping List</h2>
+                    <h2>Your Shopping List</h2>
+                    <hr style="height:7.5px;border-width:0;color:#d3c5af;background-color:#dda146;border-radius:12px">
                     <table id=list></table>
-                    <h4>
+                    <h5>
                         <input type="button" value="Clear" onclick="ClearAll()">
                         <input type="button" value="Checkout">
-                    </h4>
+                    </h5>
                 </div>
             </div>
         </div>
