Index and CSS update

--- a/templates/index.html
+++ b/templates/index.html
@@ -159,6 +159,7 @@
         <!-- SHOPPING CART -->
 
         <div class="col-md-4">
+            <div class="hero-text"></div>
             <div class="container-fluid">
                 <div id="items_table">
                     <h2>Your Shopping List</h2>
@@ -170,6 +171,7 @@
                     </h5>
                 </div>
             </div>
+           <!-- </div> -->
         </div>
         <!-- END SHOPPING CART -->
     </div>
