--- a/static/css/style.css
+++ b/static/css/style.css
@@ -334,14 +334,19 @@ h6 {
 
   /* 6B SHOPPING CART STYLING */
 
-  list {
+  #list {
     border: solid;
     border-color: #ddd;
     padding: 10px;
-    width: 250px;
+    width: 300px;
     height: 390px;
     display: flex;
     flex: row;
+  }
+
+  #items_table{
+    float: right;
+    color: #dda146;
   }
   
   /* 7. IMAGE & OTHER STYLING */
@@ -416,10 +421,7 @@ h6 {
     display: block;
   }
 
-  #items_table{
-    float: right;
-    color: #dda146;
-  }
+
 
 /* Test CSS for Product Name */
 
