--- a/templates/index.html
+++ b/templates/index.html
@@ -166,8 +166,8 @@
                     <hr style="height:7.5px;border-width:0;color:#d3c5af;background-color:#dda146;border-radius:12px">
                     <table id=list></table>
                     <h5>
-                        <input type="button" value="Clear" onclick="ClearAll()">
-                        <input type="button" value="Checkout">
+                        <input type="button1" value="Clear" onclick="ClearAll()">
+                        <input type="button1" value="Checkout">
                     </h5>
                 </div>
             </div>
