--- a/templates/index.html
+++ b/templates/index.html
@@ -87,6 +87,45 @@
                                     <hr style="height:7.5px;border-width:0;color:#d3c5af;background-color:#dda146;border-radius:12px">
                                 </div>                
                             </div>
+            <div class="card-deck">
+                <div class="card-btn text-center">
+                <div class="card">
+                    <h5>Customer Name</h5>
+                        <select id="store_number" type="text" onkeyup="myStoreFunction()" placeholder="Store" autocomplete="on">
+                        <div id="storeDiv">
+                            <ul id="storeUL">
+                                {% for s in storeList %}
+                                <option value="{{ s['store_number'] }}">{{ s['store_name'] }}</option>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                        </select>
+                </div>  
+
+        
+                <div class="card">
+                    <h5>Product Category</h5>
+                    <select id="product_category" type="text" onkeyup="myCategoryFunction()" placeholder="Category" autocomplete="on>
+                        <div id="catDiv">
+                            <ul id="catUL">
+                                {% for p in prodCatList %}
+                                <option value="{{ p['category'] }}">{{ p['category_name'] }}</option>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                        </select>
+                </div> 
+
+                <div class="card">
+                    <h5>Product Name</h5>
+                    <select id="product_name" type="text" onkeyup="myProductFunction()" placeholder="Product Name" autocomplete="on" required="required">
+                        <div id="prodDiv">
+                            <ul id="productUL">
+                                <!-- <option selected></option> -->
+                                <!-- {% for r in prodDetailList %}
+                                <option value="{{ r['item_number'] }}">{{ r['item_description'] }}</option>
+                                {% endfor %} -->
+                            </ul>
                         </div>
                     </div>
                 <div class="row">
@@ -125,10 +164,10 @@
                                         <select id="product_name" type="text" onkeyup="myProductFunction()" placeholder="Product Name" autocomplete="on" required="required">
                                             <div id="prodDiv">
                                                 <ul id="productUL">
-                                                    <option selected></option>
+                                                    <!-- <option selected></option>
                                                     {% for r in prodDetailList %}
                                                     <option value="{{ r['item_number'] }}">{{ r['item_description'] }}</option>
-                                                    {% endfor %}
+                                                    {% endfor %} -->
                                                 </ul>
                                             </div>
                                         </select>  
