--- a/templates/index.html
+++ b/templates/index.html
@@ -87,7 +87,7 @@
                                     <hr style="height:7.5px;border-width:0;color:#d3c5af;background-color:#dda146;border-radius:12px">
                                 </div>                
                             </div>
-            <div class="card-deck">
+            <!-- <div class="card-deck">
                 <div class="card-btn text-center">
                 <div class="card">
                     <h5>Customer Name</h5>
@@ -125,9 +125,9 @@
                                 <!-- {% for r in prodDetailList %}
                                 <option value="{{ r['item_number'] }}">{{ r['item_description'] }}</option>
                                 {% endfor %} -->
-                            </ul>
+                            <!--</ul>
                         </div>
-                    </div>
+                    </div> -->
                 <div class="row">
                         <div class="container">
                             <div class="card-deck">
