--- a/templates/index.html
+++ b/templates/index.html
@@ -105,7 +105,7 @@
                         
                                 <div class="card">
                                     <h5>Product Category</h5>
-                                    <select id="product_category" type="text" onkeyup="myCategoryFunction()" placeholder="Category" autocomplete="on>
+                                        <select id="product_category" type="text" onkeyup="myCategoryFunction()" placeholder="Category" autocomplete="on">
                                         <div id="catDiv">
                                             <ul id="catUL">
                                                 {% for p in prodCatList %}
