--- a/templates/index.html
+++ b/templates/index.html
@@ -121,6 +121,7 @@
                                     <select id="product_name" type="text" onkeyup="myProductFunction()" placeholder="Product Name" autocomplete="on" required="required">
                                         <div id="prodDiv">
                                             <ul id="productUL">
+                                                <option selected></option>
                                                 <!-- {% for r in prodDetailList %}
                                                 <option value="{{ r['item_number'] }}">{{ r['item_description'] }}</option>
                                                 {% endfor %} -->
