--- a/templates/index.html
+++ b/templates/index.html
@@ -120,9 +120,9 @@
                 <select id="product_name" type="text" onkeyup="myProductFunction()" placeholder="Product Name" autocomplete="on" required="required">
                     <div id="prodDiv">
                         <ul id="productUL">
-                            {% for r in prodDetailList %}
+                            <!-- {% for r in prodDetailList %}
                             <option value="{{ r['item_number'] }}">{{ r['item_description'] }}</option>
-                            {% endfor %}
+                            {% endfor %} -->
                         </ul>
                     </div>
                 </select>  
