--- a/templates/index.html
+++ b/templates/index.html
@@ -78,7 +78,7 @@
         <div class="row">
             <div class="hero-text">
                 <div class="row">
-                    <div class="col-md-5">
+                    <div class="col-md-7">
                         <h2>Place Your Order Here</h2>
                         <hr style="height:7.5px;border-width:0;color:#d3c5af;background-color:#dda146;border-radius:12px">
 
@@ -101,7 +101,7 @@
                         
                                 <div class="card">
                                     <h5>Product Category</h5>
-                                    <select id="product_category" type="text" onkeyup="myCategoryFunction()" placeholder="Category" autocomplete="on">
+                                    <select id="product_category" type="text" onchange="displayAccordingly()" placeholder="Category" autocomplete="on">
                                         <div id="catDiv">
                                             <ul id="catUL">
                                                 {% for p in prodCatList %}
