handling div visibility

--- a/templates/index.html
+++ b/templates/index.html
@@ -181,7 +181,7 @@
         <div id="scroll_2">
             <div class="container">
                 <div class="row">
-                    <div class="recommend-text">
+                    <div id="recommend-product-head" class="recommend-text">
                         <h2>You might like to consider</h2>
                         <br>
                         <h3>These items are recommended based on your product choice.....</h3>
@@ -191,7 +191,7 @@
                     <div id="recommend-product" class="row">
                     </div>
 
-                    <div class="recommend-text">
+                    <div id="recommend-customer-head" class="recommend-text">
                         <br>
                         <h3>These items are based on customer choices.....</h3>
                         <hr style="height:7.5px;border-width:0;color:#d3c5af;background-color:#dda146;border-radius:12px">
@@ -201,7 +201,7 @@
                     </div>
                     <br>
 
-                    <div class="recommend-text">
+                    <div id="recommend-popular-head" class="recommend-text">
                         <br>
                         <h3>These are the best selling items.....</h3>
                         <hr style="height:7.5px;border-width:0;color:#d3c5af;background-color:#dda146;border-radius:12px">
