--- a/templates/index.html
+++ b/templates/index.html
@@ -77,7 +77,7 @@
     <div class="container">
         <div class="row">
             <div class="hero-text">
-                <div class="row">
+                <!-- <div class="row"> -->
                     <div class="col-md-7">
                         <h2>Place Your Order Here</h2>
                         <hr style="height:7.5px;border-width:0;color:#d3c5af;background-color:#dda146;border-radius:12px">
@@ -166,7 +166,7 @@
 
 
     
-                </div>               
+                <!-- </div>                -->
             </div>
         </div>
     </div>
