--- a/static/css/style.css
+++ b/static/css/style.css
@@ -226,6 +226,15 @@ h6 {
   .button1 {
     background-color: #dda146; 
     color: white; 
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    border-radius: 18px;
   }
 
   .button1:hover {
@@ -274,6 +283,7 @@ h6 {
 
   .card-deck {
     min-height: 320px;
+    min-width: 400px;
   }
 
   .card {
