--- a/static/css/style.css
+++ b/static/css/style.css
@@ -364,7 +364,7 @@ h6 {
   .items_table{
     /* float: right; */
     color: #ddd;
-    padding: 10px;
+    
   }
 
   .table {
@@ -382,6 +382,8 @@ h6 {
 
   .td {
     text-align: right;
+    padding: 10px;
+    font-size: 18px;
   }
 
   .td.first {
