--- a/templates/index.html
+++ b/templates/index.html
@@ -155,8 +155,8 @@
                                 <hr style="height:7.5px;border-width:0;color:#d3c5af;background-color:#dda146;border-radius:12px">
                                 <h4>
                                     <table id=list></table>
-                                        <input type="button1" value="Clear" onclick="ClearAll()">
-                                        <input type="button1" value="Checkout">
+                                        <input type="button" value="Clear" onclick="ClearAll()" class="button-order button1>
+                                        <input type="button" value="Checkout" class="button-order button1>
                                 </h4>
                             </div>
                         </div>
