--- a/templates/index.html
+++ b/templates/index.html
@@ -155,8 +155,9 @@
                                 <hr style="height:7.5px;border-width:0;color:#d3c5af;background-color:#dda146;border-radius:12px">
                                 <h4>
                                     <table id=list></table>
-                                        <input type="button" value="Clear" onclick="ClearAll()" class="button-order button1>
-                                        <input type="button" value="Checkout" class="button-order button1>
+                                        <!-- <input type="button" value="Clear" onclick="ClearAll()"> -->
+                                        <button id="submit" type="submit" class="button-order button1" value="Clear" onclick="ClearAll()">
+                                        <input type="button" value="Checkout">
                                 </h4>
                             </div>
                         </div>
