--- a/templates/index.html
+++ b/templates/index.html
@@ -157,7 +157,9 @@
                                     <table id=list></table>
                                         <!-- <input type="button" value="Clear" onclick="ClearAll()"> -->
                                         <button id="submit" type="submit" class="button-order button1" value="Clear" onclick="ClearAll()">
-                                        <input type="button" value="Checkout">
+                                        </button>
+                                            <!-- <input type="button" value="Checkout"> -->
+                                            <button class="button-order button1" value="Checkout"></button>
                                 </h4>
                             </div>
                         </div>
