--- a/templates/index.html
+++ b/templates/index.html
@@ -156,10 +156,14 @@
                                 <h4>
                                     <table id=list></table>
                                         <!-- <input type="button" value="Clear" onclick="ClearAll()"> -->
+                                        <div class="row">
                                         <button id="submit" type="submit" class="button-order button1" value="Clear" onclick="ClearAll()">
                                         </button>
-                                            <!-- <input type="button" value="Checkout"> -->
-                                            <button class="button-order button1" value="Checkout"></button>
+                                        <!-- <input type="button" value="Checkout"> -->
+
+                                        <button class="button-order button1" value="Checkout">
+                                        </button>
+                                    </div>
                                 </h4>
                             </div>
                         </div>
