--- a/static/css/style.css
+++ b/static/css/style.css
@@ -380,9 +380,17 @@ h6 {
     padding: 5px;
   }
 
+  .th {
+    height: 25px;
+  }
+
+  .tr {
+    height: 20px;
+  }
+  
   .td {
     text-align: right;
-    padding: 10px;
+    padding: 5px;
     font-size: 18px;
   }
 
