--- a/templates/index.html
+++ b/templates/index.html
@@ -159,14 +159,14 @@
                             </div>
                             <!-- <input type="button" value="Clear" onclick="ClearAll()"> -->
                             <div class="row">
-                                <h5>
+                                <div class="col-md-7">
                                     <button id="submit" type="submit" class="button-order button1" value="Clear" onclick="ClearAll()">
                                     </button>
                                     <!-- <input type="button" value="Checkout"> -->
 
                                     <button class="button-order button1" value="Checkout">
                                     </button>
-                                </h5>
+                                </div>
                             </div>
                         </div>
                         </div>
