--- a/templates/index.html
+++ b/templates/index.html
@@ -149,7 +149,7 @@
 
                     <div class="col-md-6">
                         <div class="hero-text"></div>
-                        <div class="container-fluid">
+                        <div class="container">
                             <div id="items_table">
                                 <h2>Your Shopping List</h2>
                                 <hr style="height:7.5px;border-width:0;color:#d3c5af;background-color:#dda146;border-radius:12px">
