--- a/static/css/style.css
+++ b/static/css/style.css
@@ -382,16 +382,18 @@ h6 {
 
   .th {
     height: 25px;
+    padding-bottom: 5px;
   }
 
   .tr {
     height: 20px;
+    padding-bottom: 5px;
   }
   
   .td {
     text-align: right;
     padding: 5px;
-    font-size: 18px;
+    font-size: 16px;
   }
 
   .td.first {
