--- a/templates/index.html
+++ b/templates/index.html
@@ -148,7 +148,7 @@
                     <!-- SHOPPING CART -->
 
                     <div class="col-md-6">
-                        <div class="hero-text"></div>
+                        <div class="hero-text">
                         <div class="container">
                             <div id="items_table">
                                 <h2>Your Shopping List</h2>
@@ -159,7 +159,8 @@
                             </div>
                             <!-- <input type="button" value="Clear" onclick="ClearAll()"> -->
                             <div class="row">
-                                <div class="col-md-7">
+                                <div class="col-md-12">
+
                                     <button id="submit" type="submit" class="button-order button1" value="Clear" onclick="ClearAll()">
                                     </button>
                                     <!-- <input type="button" value="Checkout"> -->
