--- a/templates/index.html
+++ b/templates/index.html
@@ -161,11 +161,11 @@
                             <div class="row">
                                 <div class="col-md-12">
 
-                                    <button id="submit" type="submit" class="button-order button1" value="Clear" onclick="ClearAll()">
+                                    <button id="submit" type="submit" class="button-order button1" onclick="ClearAll()">Clear Cart
                                     </button>
                                     <!-- <input type="button" value="Checkout"> -->
 
-                                    <button class="button-order button1" value="Checkout">
+                                    <button class="button-order button1" value="Checkout">Checkout
                                     </button>
                                 </div>
                             </div>
