--- a/static/css/style.css
+++ b/static/css/style.css
@@ -298,14 +298,14 @@ h6 {
   .card-team {
     background-color: #ddd;
     padding: 25px 25px, 15px 15px;
-    /* box-shadow: 0 4px 8px 0 rgba(0,0,0,0.5); */
-    /* transition: 0.5s; */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.5);
+    transition: 0.5s;
     font-size: 24px;
     min-height: 500px;
     min-width: 350px;
   } 
 
-  .card:hover {
+  .card-team:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.5);
   }
 
