--- a/templates/index.html
+++ b/templates/index.html
@@ -82,7 +82,7 @@
                         <h2>Place Your Order Here</h2>
                         <hr style="height:7.5px;border-width:0;color:#d3c5af;background-color:#dda146;border-radius:12px">
 
-                        <div class="container">
+                        <div class="container-fluid">
                             <div class="card-deck">
                                 <div class="card-btn text-center">
                                 <div class="card">
@@ -149,7 +149,7 @@
 
                     <div class="col-md-6">
                         <div class="hero-text">
-                        <div class="container">
+                        <div class="container-fluid">
                             <div id="items_table">
                                 <h2>Your Shopping List</h2>
                                 <hr style="height:7.5px;border-width:0;color:#d3c5af;background-color:#dda146;border-radius:12px">
