--- a/static/css/style.css
+++ b/static/css/style.css
@@ -320,6 +320,7 @@ h6 {
     padding-top: 10px;
     padding-bottom: 10px;
     font-size: 18px;
+    max-width: 380px;
   }
 
   .containerProd {
@@ -350,7 +351,7 @@ h6 {
     font-size: 18px;
   }
 
-  option {
+  .option {
     max-width: 400px;
   }
 
