--- a/templates/about.html
+++ b/templates/about.html
@@ -43,7 +43,7 @@
               <div class="hero-text">
                   <h2>Scikits Iowa Alcohol Distributors - Machine Learning Project</h2>
                   <hr style="height:7.5px;border-width:0;color:#d3c5af;background-color:#3a3a3a;border-radius:12px">
-                  <h3>Projest Summary</h3><br>
+                  <h3>Project Summary</h3><br>
                   <h4>Machine learning product recommender for wholesale liquor outlets in Iowa USA to increase conversion rates & revenue per customer.</h4><br>
                   <h3>Successfully Completed</h3>
                   <h4>Built and deployed working machine learning website with a personalised product recommender based on data obtained from Google's machine learning public databases.</h4><br>
