--- a/templates/index.html
+++ b/templates/index.html
@@ -195,7 +195,7 @@
                         <div class="recommend-text">
                             <h2>You might like to consider</h2>
                             <br>
-                            <h3>Customers who bought the items in your shopping cart, also bought.....</h3>
+                            <h3>Based on your shopping cart, you may also like.....</h3>
                             <hr style="height:7.5px;border-width:0;color:#d3c5af;background-color:#dda146;border-radius:12px">
                         </div>
 
@@ -205,7 +205,7 @@
                     <div id="recommend-customer-head">
                         <div class="recommend-text">
                             <br>
-                            <h3>Similar customers have also bought these products......</h3>
+                            <h3>Similar customers went on to buy......</h3>
                             <hr style="height:7.5px;border-width:0;color:#d3c5af;background-color:#dda146;border-radius:12px">
                         </div>
 
@@ -216,7 +216,7 @@
                     <div id="recommend-popular-head">
                         <div class="recommend-text">
                             <br>
-                            <h3>These are the best selling items.....</h3>
+                            <h3>These are the best selling products recommended for you.....</h3>
                             <hr style="height:7.5px;border-width:0;color:#d3c5af;background-color:#dda146;border-radius:12px">
                         </div>
 
