--- a/templates/about.html
+++ b/templates/about.html
@@ -46,7 +46,7 @@
                   <h3>Project Summary</h3><br>
                   <h4>Machine learning product recommender for wholesale liquor outlets in Iowa USA to increase conversion rates & revenue per customer.</h4><br>
                   <h3>Successfully Completed</h3>
-                  <h4>Built and deployed working machine learning website with a personalised product recommender based on data obtained from Google's machine learning public databases.</h4><br>
+                  <h4>Built and deployed working machine learning web app with a personalised product recommender based on data obtained from Google's machine learning public datasets.</h4><br>
                   <h3>Why is this important?</h3>
                   <h4>According to McKinsey, 35% of consumer purchases on Amazon come from product recommendations.</h4><br>                  
               </div>
@@ -82,7 +82,7 @@
                   <hr style="height:7.5px;border-width:0;color:#d3c5af;background-color:#dda146;border-radius:12px">
                   <img class="img-project img-responsive" src="{{ url_for('static',filename='img/Bootcamp_workflow_final.png') }}">
                   <br>
-                  <img class="img-project img-responsive" src="{{ url_for('static',filename='img/Architecture.png') }}">
+                  <img class="img-project img-responsive" src="{{ url_for('static',filename='img/Architecture1.png') }}">
               </div>
           </div>
       </div>
