--- a/templates/about.html
+++ b/templates/about.html
@@ -100,7 +100,7 @@
                   <hr style="height:7.5px;border-width:0;color:#d3c5af;background-color:#3a3a3a;border-radius:12px"">
                   <img class="img-project img-responsive" src="{{ url_for('static',filename='img/Machine_learning1.png') }}">
                   <br>
-                  <img class="img-project img-responsive" src="{{ url_for('static',filename='img/colab_filter.png') }}">
+                  <img class="img-project img-responsive" src="{{ url_for('static',filename='img/colab_filter1.png') }}">
                   <br>
                   <img class="img-project img-responsive" src="{{ url_for('static',filename='img/pop_filter.png') }}">
 
